--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
     </div>
 </nav>
         <div id="container">
+
             <div class="sidebar" id="leftColumn">
                 <div class="sidebar--inner" id="sideMenu"></div>
             </div>
+
             <div id="main">
 <div class="main-content" id="content" pageIds="wizardKit::////PointingToDeclaration//-1895328757">
   <div class="breadcrumbs"></div>
@@ -67,96 +69,7 @@
     <h1 class="cover"><span>wizard</span><wbr></wbr><span><span>Kit</span></span></h1>
   </div>
   <h2 class="">Packages</h2>
-  <div class="table"><a data-name="-535159541%2FPackages%2F-1895328757" anchor-label="com.tot.wizardKit" id="-535159541%2FPackages%2F-1895328757" data-filterable-set=":wizardKit:dokkaHtml/release"></a>
-    <div class="table-row" data-filterable-current=":wizardKit:dokkaHtml/release" data-filterable-set=":wizardKit:dokkaHtml/release">
-      <div>
-        <div class="main-subrow ">
-          <div class=""><span class="inline-flex">
-              <div><a href="wizard-kit/com.tot.wizardKit/index.html">com.tot.wizardKit</a></div>
-<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-535159541%2FPackages%2F-1895328757"></span>
-                <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
-              </span></span></div>
-          <div class="pull-right">
-            <div class="platform-tags no-gutters">
-              <div class="platform-tag jvm-like">androidJvm</div>
-            </div>
-          </div>
-        </div>
-        <div></div>
-      </div>
-    </div>
-<a data-name="-33987401%2FPackages%2F-1895328757" anchor-label="com.tot.wizardKit.api" id="-33987401%2FPackages%2F-1895328757" data-filterable-set=":wizardKit:dokkaHtml/release"></a>
-    <div class="table-row" data-filterable-current=":wizardKit:dokkaHtml/release" data-filterable-set=":wizardKit:dokkaHtml/release">
-      <div>
-        <div class="main-subrow ">
-          <div class=""><span class="inline-flex">
-              <div><a href="wizard-kit/com.tot.wizardKit.api/index.html">com.tot.wizardKit.api</a></div>
-<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-33987401%2FPackages%2F-1895328757"></span>
-                <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
-              </span></span></div>
-          <div class="pull-right">
-            <div class="platform-tags no-gutters">
-              <div class="platform-tag jvm-like">androidJvm</div>
-            </div>
-          </div>
-        </div>
-        <div></div>
-      </div>
-    </div>
-<a data-name="438609864%2FPackages%2F-1895328757" anchor-label="com.tot.wizardKit.enum" id="438609864%2FPackages%2F-1895328757" data-filterable-set=":wizardKit:dokkaHtml/release"></a>
-    <div class="table-row" data-filterable-current=":wizardKit:dokkaHtml/release" data-filterable-set=":wizardKit:dokkaHtml/release">
-      <div>
-        <div class="main-subrow ">
-          <div class=""><span class="inline-flex">
-              <div><a href="wizard-kit/com.tot.wizardKit.enum/index.html">com.tot.wizardKit.enum</a></div>
-<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="438609864%2FPackages%2F-1895328757"></span>
-                <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
-              </span></span></div>
-          <div class="pull-right">
-            <div class="platform-tags no-gutters">
-              <div class="platform-tag jvm-like">androidJvm</div>
-            </div>
-          </div>
-        </div>
-        <div></div>
-      </div>
-    </div>
-<a data-name="-1286734266%2FPackages%2F-1895328757" anchor-label="com.tot.wizardKit.model" id="-1286734266%2FPackages%2F-1895328757" data-filterable-set=":wizardKit:dokkaHtml/release"></a>
-    <div class="table-row" data-filterable-current=":wizardKit:dokkaHtml/release" data-filterable-set=":wizardKit:dokkaHtml/release">
-      <div>
-        <div class="main-subrow ">
-          <div class=""><span class="inline-flex">
-              <div><a href="wizard-kit/com.tot.wizardKit.model/index.html">com.tot.wizardKit.model</a></div>
-<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="-1286734266%2FPackages%2F-1895328757"></span>
-                <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
-              </span></span></div>
-          <div class="pull-right">
-            <div class="platform-tags no-gutters">
-              <div class="platform-tag jvm-like">androidJvm</div>
-            </div>
-          </div>
-        </div>
-        <div></div>
-      </div>
-    </div>
-<a data-name="1399962062%2FPackages%2F-1895328757" anchor-label="com.tot.wizardKit.utils" id="1399962062%2FPackages%2F-1895328757" data-filterable-set=":wizardKit:dokkaHtml/release"></a>
-    <div class="table-row" data-filterable-current=":wizardKit:dokkaHtml/release" data-filterable-set=":wizardKit:dokkaHtml/release">
-      <div>
-        <div class="main-subrow ">
-          <div class=""><span class="inline-flex">
-              <div><a href="wizard-kit/com.tot.wizardKit.utils/index.html">com.tot.wizardKit.utils</a></div>
-<span class="anchor-wrapper"><span class="anchor-icon" pointing-to="1399962062%2FPackages%2F-1895328757"></span>
-                <div class="copy-popup-wrapper "><span class="copy-popup-icon"></span><span>Link copied to clipboard</span></div>
-              </span></span></div>
-          <div class="pull-right">
-            <div class="platform-tags no-gutters">
-              <div class="platform-tag jvm-like">androidJvm</div>
-            </div>
-          </div>
-        </div>
-        <div></div>
-      </div>
-    </div>
+  <div class="table">
 <a data-name="145926456%2FPackages%2F-1895328757" anchor-label="com.tot.wizardKit.views.accordianView" id="145926456%2FPackages%2F-1895328757" data-filterable-set=":wizardKit:dokkaHtml/release"></a>
     <div class="table-row" data-filterable-current=":wizardKit:dokkaHtml/release" data-filterable-set=":wizardKit:dokkaHtml/release">
       <div>
